professional hockeys section added

--- a/index.html
+++ b/index.html
@@ -54,6 +54,63 @@
           </div>
         </div>
       </section>
+
+      <!-- Professional Hockeys -->
+      <section class="text-center mt-24">
+        <div class="divider mb-8"></div>
+        <h1 class="text-5xl font-bold">Professional Hockeys Club</h1>
+        <p>
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+          placerat dolor. Purus urna in sit nullam proin.
+        </p>
+        <div class="divider mt-8 mb-12"></div>
+        <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
+          <div>
+            <div
+              class="radial-progress text-red-500"
+              style="--value: 87"
+              role="progressbar"
+            >
+              <span class="text-black font-bold text-xl">87%</span>
+            </div>
+            <h5 class="text-xl font-semibold mt-6 mb-4">Prayer Facility</h5>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-green-500"
+              style="--value: 95"
+              role="progressbar"
+            >
+              <span class="text-black font-bold text-xl">95%</span>
+            </div>
+            <h5 class="text-xl font-semibold mt-6 mb-4">Experienced Coach</h5>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-yellow-500"
+              style="--value: 90"
+              role="progressbar"
+            >
+              <span class="text-black font-bold text-xl">90%</span>
+            </div>
+            <h5 class="text-xl font-semibold mt-6 mb-4">Senior Player</h5>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+          <div>
+            <div
+              class="radial-progress text-purple-500"
+              style="--value: 80"
+              role="progressbar"
+            >
+              <span class="text-black font-bold text-xl">80%</span>
+            </div>
+            <h5 class="text-xl font-semibold mt-6 mb-4">Training Ground</h5>
+            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+      </section>
     </header>
     <main></main>
     <footer></footer>
