program section added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- Professional Hockeys -->
       <section class="text-center mt-24">
         <div class="divider mb-8"></div>
-        <h1 class="text-5xl font-bold">Professional Hockeys Club</h1>
+        <h1 class="text-5xl font-bold mb-6">Professional Hockeys Club</h1>
         <p>
           Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
           placerat dolor. Purus urna in sit nullam proin.
@@ -108,6 +108,82 @@
             </div>
             <h5 class="text-xl font-semibold mt-6 mb-4">Training Ground</h5>
             <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Program section -->
+      <section class="text-center mt-24 mb-24">
+        <div class="divider mb-8"></div>
+        <h1 class="text-5xl font-bold mb-6">Program Sections</h1>
+        <p>
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+          placerat dolor. Purus urna in sit nullam proin.
+        </p>
+        <div class="divider mt-8 mb-12"></div>
+        <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+          <div
+            class="hero w-full h-[338px]"
+            style="background-image: url(Images/2.png)"
+          >
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div
+              class="hero-content text-center text-neutral-content mr-16 mt-16"
+            >
+              <div class="max-w-md text-left">
+                <h1 class="mb-5 text-3xl font-bold">Junior Program</h1>
+                <p class="mb-5">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Id et sed euismod natoque
+                  amet nunc morbi nulla. Tortor congue sed et in.
+                </p>
+                <button class="btn bg-[#FF4240] border-none text-white text-xl">
+                  Register Now
+                </button>
+              </div>
+            </div>
+          </div>
+          <div
+            class="hero w-full h-[338px]"
+            style="background-image: url(Images/3.png)"
+          >
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div
+              class="hero-content text-center text-neutral-content mr-16 mt-16"
+            >
+              <div class="max-w-md text-left">
+                <h1 class="mb-5 text-3xl font-bold">Teenager Program</h1>
+                <p class="mb-5">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Id et sed euismod natoque
+                  amet nunc morbi nulla. Tortor congue sed et in.
+                </p>
+                <button class="btn bg-[#FF4240] border-none text-white text-xl">
+                  Register Now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="w-full">
+          <div
+            class="hero w-full h-[450px] mt-6"
+            style="background-image: url(Images/4.png)"
+          >
+            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-content w-full text-center text-neutral-content">
+              <div class="max-w-md lg:mr-[700px] mt-[150px] text-left">
+                <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
+                <p class="mb-5">
+                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
+                  elit enim sagittis turpis in magna. Id et sed euismod natoque
+                  amet nunc morbi nulla. Tortor congue sed et in.
+                </p>
+                <button class="btn bg-[#FF4240] border-none text-white text-xl">
+                  Register Now
+                </button>
+              </div>
+            </div>
           </div>
         </div>
       </section>
