--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <style>
+      p {
+        color: #13131899;
+      }
+    </style>
   </head>
   <body>
     <header class="max-w-screen-xl mt-14 mx-auto">
@@ -54,7 +66,8 @@
           </div>
         </div>
       </section>
-
+    </header>
+    <main class="max-w-screen-xl mt-14 mx-auto">
       <!-- Professional Hockeys -->
       <section class="text-center mt-24">
         <div class="divider mb-8"></div>
@@ -116,7 +129,7 @@
       <section class="text-center mt-24 mb-24">
         <div class="divider mb-8"></div>
         <h1 class="text-5xl font-bold mb-6">Program Sections</h1>
-        <p>
+        <p class="text-white">
           Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
           placerat dolor. Purus urna in sit nullam proin.
         </p>
@@ -131,8 +144,10 @@
               class="hero-content text-center text-neutral-content mr-16 mt-16"
             >
               <div class="max-w-md text-left">
-                <h1 class="mb-5 text-3xl font-bold">Junior Program</h1>
-                <p class="mb-5">
+                <h1 class="mb-5 text-3xl font-bold text-white">
+                  Junior Program
+                </h1>
+                <p class="mb-5 text-white">
                   Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
                   elit enim sagittis turpis in magna. Id et sed euismod natoque
                   amet nunc morbi nulla. Tortor congue sed et in.
@@ -152,8 +167,10 @@
               class="hero-content text-center text-neutral-content mr-16 mt-16"
             >
               <div class="max-w-md text-left">
-                <h1 class="mb-5 text-3xl font-bold">Teenager Program</h1>
-                <p class="mb-5">
+                <h1 class="mb-5 text-3xl font-bold text-white">
+                  Teenager Program
+                </h1>
+                <p class="mb-5 text-white">
                   Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
                   elit enim sagittis turpis in magna. Id et sed euismod natoque
                   amet nunc morbi nulla. Tortor congue sed et in.
@@ -173,8 +190,10 @@
             <div class="hero-overlay bg-opacity-60"></div>
             <div class="hero-content w-full text-center text-neutral-content">
               <div class="max-w-md lg:mr-[700px] mt-[150px] text-left">
-                <h1 class="mb-5 text-3xl font-bold">Professional Program</h1>
-                <p class="mb-5">
+                <h1 class="mb-5 text-3xl font-bold text-white">
+                  Professional Program
+                </h1>
+                <p class="mb-5 text-white">
                   Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
                   elit enim sagittis turpis in magna. Id et sed euismod natoque
                   amet nunc morbi nulla. Tortor congue sed et in.
@@ -187,8 +206,230 @@
           </div>
         </div>
       </section>
-    </header>
-    <main></main>
+
+      <!-- New Product -->
+      <section class="text-center mb-24">
+        <div class="divider mb-8"></div>
+        <h1 class="text-5xl font-bold mb-6">Our New Products</h1>
+        <p>
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+          placerat dolor. Purus urna in sit nullam proin.
+        </p>
+        <div class="divider mt-8 mb-12"></div>
+
+        <!-- product content -->
+        <div class="lg:flex gap-6 justify-center">
+          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+            <img src="Images/5.png" alt="" />
+            <div class="text-left">
+              <div class="flex items-center justify-between">
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400 mr-1"
+                  />
+                  <span>5.0</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-eye mr-1"></i>
+                  <span>20</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart mr-1"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h3 class="my-3 text-lg font-bold">World Cup Flags Football</h3>
+              <p class="text-sm mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FF4240] font-bold">Price - $22</p>
+                <div class="flex items-center">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <p class="text-sm ml-1">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+            <img src="Images/6.png" alt="" />
+            <div class="text-left">
+              <div class="flex items-center justify-between">
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400 mr-1"
+                  />
+                  <span>5.0</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-eye mr-1"></i>
+                  <span>20</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart mr-1"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h3 class="my-3 text-lg font-bold">World Cup Flags Football</h3>
+              <p class="text-sm mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FF4240] font-bold">Price - $22</p>
+                <div class="flex items-center">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <p class="text-sm ml-1">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lg:flex gap-6 justify-center mt-6">
+          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+            <img src="Images/7.png" alt="" />
+            <div class="text-left">
+              <div class="flex items-center justify-between">
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400 mr-1"
+                  />
+                  <span>5.0</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-eye mr-1"></i>
+                  <span>20</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart mr-1"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h3 class="my-3 text-lg font-bold">Cap For Hockeys</h3>
+              <p class="text-sm mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FF4240] font-bold">Price - $22</p>
+                <div class="flex items-center">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <p class="text-sm ml-1">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+            <img src="Images/8.png" alt="" />
+            <div class="text-left">
+              <div class="flex items-center justify-between">
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400 mr-1"
+                  />
+                  <span>5.0</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-eye mr-1"></i>
+                  <span>20</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart mr-1"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h3 class="my-3 text-lg font-bold">World Cup Flags Football</h3>
+              <p class="text-sm mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FF4240] font-bold">Price - $22</p>
+                <div class="flex items-center">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <p class="text-sm ml-1">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="lg:flex gap-6 mt-6 mb-20 justify-center">
+          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+            <img src="Images/9.png" alt="" />
+            <div class="text-left">
+              <div class="flex items-center justify-between">
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400 mr-1"
+                  />
+                  <span>5.0</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-eye mr-1"></i>
+                  <span>20</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart mr-1"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h3 class="my-3 text-lg font-bold">World Cup Flags Football</h3>
+              <p class="text-sm mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FF4240] font-bold">Price - $22</p>
+                <div class="flex items-center">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <p class="text-sm ml-1">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+            <img src="Images/10.png" alt="" />
+            <div class="text-left">
+              <div class="flex items-center justify-between">
+                <div class="rating">
+                  <input
+                    type="radio"
+                    name="rating-2"
+                    class="mask mask-star-2 bg-orange-400 mr-1"
+                  />
+                  <span>5.0</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-eye mr-1"></i>
+                  <span>20</span>
+                </div>
+                <div>
+                  <i class="fa-regular fa-heart mr-1"></i>
+                  <span>200</span>
+                </div>
+              </div>
+              <h3 class="my-3 text-lg font-bold">World Cup Flags Football</h3>
+              <p class="text-sm mb-4">
+                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+              </p>
+              <div class="flex justify-between">
+                <p class="text-[#FF4240] font-bold">Price - $22</p>
+                <div class="flex items-center">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                  <p class="text-sm ml-1">Delivery Fee : Free</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
