--- a/index.html
+++ b/index.html
@@ -429,6 +429,100 @@
           </div>
         </div>
       </section>
+
+      <!-- Get In Touch -->
+      <section class="text-center">
+        <div class="divider mb-8"></div>
+        <h1 class="text-5xl font-bold mb-6">Get In Touch</h1>
+        <p>
+          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+          placerat dolor. Purus urna in sit nullam proin.
+        </p>
+        <div class="divider mt-8 mb-12"></div>
+
+        <!-- Get in touch container -->
+        <div class="mb-20 grid grid-cols-1 lg:grid-cols-3 gap-6">
+          <div class="flex flex-col gap-6 border-2 p-8">
+            <div class="text-left bg-[#bced6d1a] p-8">
+              <img class="mb-6" src="Images/Group 1171275317.png" alt="" />
+              <p>Phone Number</p>
+              <h3 class="text-lg font-bold">+99465823264</h3>
+            </div>
+            <div class="text-left bg-[#fddd5f1a] p-8">
+              <img class="mb-6" src="Images/Group 1171275318.png" alt="" />
+              <p>Email</p>
+              <h3 class="text-lg font-bold">abc@gmail.com</h3>
+            </div>
+            <div class="text-left bg-[#629cf31a] p-8">
+              <img class="mb-6" src="Images/Group 1171275321.png" alt="" />
+              <p>Location</p>
+              <h3 class="text-lg font-bold">Dhaka,Bangladesh</h3>
+            </div>
+          </div>
+          <div class="col-span-2">
+            <div class="flex gap-6">
+              <div class="flex flex-col text-left w-full">
+                <span class="text-xl font-bold mb-4">Your Name</span>
+                <input
+                  class="h-16 w-full bg-[#13131808] pl-2 outline-none rounded-lg"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Enter your full name"
+                />
+              </div>
+              <div class="flex flex-col text-left w-full">
+                <span class="text-xl font-bold mb-4">Your Email</span>
+                <input
+                  class="h-16 w-full bg-[#13131808] pl-2 outline-none rounded-lg"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Enter your Email"
+                />
+              </div>
+            </div>
+            <div class="flex gap-6 mt-6">
+              <div class="flex flex-col text-left w-full">
+                <span class="text-xl font-bold mb-4">Subject</span>
+                <input
+                  class="h-16 w-full bg-[#13131808] pl-2 outline-none rounded-lg"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Enter your Subject"
+                />
+              </div>
+              <div class="flex flex-col text-left w-full">
+                <span class="text-xl font-bold mb-4">Phone Number</span>
+                <input
+                  class="h-16 w-full bg-[#13131808] pl-2 outline-none rounded-lg"
+                  type="text"
+                  name=""
+                  id=""
+                  placeholder="Enter your Phone Number"
+                />
+              </div>
+            </div>
+            <div class="flex flex-col text-left mt-6">
+              <span class="text-xl font-bold mb-4">Message</span>
+              <textarea
+                class="bg-[#13131808] pl-2 outline-none rounded-lg pt-2"
+                name=""
+                id=""
+                cols="30"
+                rows="12"
+                placeholder="Write your message"
+              ></textarea>
+            </div>
+            <button
+              class="btn bg-[#FF4240] text-white border-none w-full mt-6 text-xl"
+            >
+              Send Message
+            </button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
