--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
         <!-- product content -->
         <div class="lg:flex gap-6 justify-center">
-          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+          <div class="flex gap-5 w-full items-center border-2 p-6 rounded-xl">
             <img src="Images/5.png" alt="" />
             <div class="text-left">
               <div class="flex items-center justify-between">
@@ -253,7 +253,7 @@
               </div>
             </div>
           </div>
-          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+          <div class="flex gap-5 w-full items-center border-2 p-6 rounded-xl">
             <img src="Images/6.png" alt="" />
             <div class="text-left">
               <div class="flex items-center justify-between">
@@ -289,7 +289,7 @@
           </div>
         </div>
         <div class="lg:flex gap-6 justify-center mt-6">
-          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+          <div class="flex gap-5 w-full items-center border-2 p-6 rounded-xl">
             <img src="Images/7.png" alt="" />
             <div class="text-left">
               <div class="flex items-center justify-between">
@@ -323,7 +323,7 @@
               </div>
             </div>
           </div>
-          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+          <div class="flex gap-5 w-full items-center border-2 p-6 rounded-xl">
             <img src="Images/8.png" alt="" />
             <div class="text-left">
               <div class="flex items-center justify-between">
@@ -359,7 +359,7 @@
           </div>
         </div>
         <div class="lg:flex gap-6 mt-6 mb-20 justify-center">
-          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+          <div class="flex gap-5 w-full items-center border-2 p-6 rounded-xl">
             <img src="Images/9.png" alt="" />
             <div class="text-left">
               <div class="flex items-center justify-between">
@@ -393,7 +393,7 @@
               </div>
             </div>
           </div>
-          <div class="flex gap-5 items-center border-2 p-6 rounded-xl">
+          <div class="flex gap-5 w-full items-center border-2 p-6 rounded-xl">
             <img src="Images/10.png" alt="" />
             <div class="text-left">
               <div class="flex items-center justify-between">
@@ -522,8 +522,55 @@
             </button>
           </div>
         </div>
+        <!-- Social Icon -->
+        <div class="mb-20 bg-[#13131808] p-9 rounded-xl">
+          <h3 class="text-2xl font-bold mb-6">Social Media</h3>
+          <div>
+            <i class="mr-3 text-2xl fa-brands fa-facebook"></i>
+            <i class="mr-3 text-2xl fa-brands fa-instagram"></i>
+            <i class="mr-3 text-2xl fa-brands fa-twitter"></i>
+            <i class="text-2xl fa-brands fa-linkedin"></i>
+          </div>
+        </div>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="footer p-10 bg-[#131318] text-white">
+      <aside class="ml-28 w-1/2">
+        <h3 class="text-3xl font-bold mb-1">Get In Touch</h3>
+        <p class="text-white">
+          Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
+          dolor. Purus urna in sit nullam proin.
+        </p>
+        <div class="mt-6">
+          <i class="fa-regular fa-message text-red-500 mr-2"></i>
+          <span>abc@gmail.com</span>
+        </div>
+        <div class="">
+          <i class="fa-solid fa-phone text-red-500 mr-2"></i>
+          <span>+9938783264</span>
+        </div>
+      </aside>
+      <nav>
+        <header class="footer-title">Services</header>
+        <a class="link link-hover">Branding</a>
+        <a class="link link-hover">Design</a>
+        <a class="link link-hover">Marketing</a>
+        <a class="link link-hover">Advertisement</a>
+      </nav>
+      <nav>
+        <header class="footer-title">Company</header>
+        <a class="link link-hover">About us</a>
+        <a class="link link-hover">Contact</a>
+        <a class="link link-hover">Jobs</a>
+        <a class="link link-hover">Press kit</a>
+      </nav>
+      <nav>
+        <header class="footer-title">Legal</header>
+        <a class="link link-hover">Terms of use</a>
+        <a class="link link-hover">Privacy policy</a>
+        <a class="link link-hover">Cookie policy</a>
+      </nav>
+    </footer>
   </body>
 </html>
