some design added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section>
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
-            <img src="Images/1.png" class="w-full h-[550px]" />
+            <img src="Images/1.png" class="w-full max-h-[90%]" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -38,7 +38,7 @@
             </div>
           </div>
           <div id="slide2" class="carousel-item relative w-full">
-            <img src="Images/2.png" class="w-full h-[550px]" />
+            <img src="Images/2.png" class="w-full max-h-[90%]" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -46,8 +46,8 @@
               <a href="#slide3" class="btn btn-circle bg-black text-white">❯</a>
             </div>
           </div>
-          <div id="slide3" class="carousel-item relative w-full h-[550px]">
-            <img src="Images/3.png" class="w-full" />
+          <div id="slide3" class="carousel-item relative w-full">
+            <img src="Images/3.png" class="w-full max-h-[90%]" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -55,8 +55,8 @@
               <a href="#slide4" class="btn btn-circle bg-black text-white">❯</a>
             </div>
           </div>
-          <div id="slide4" class="carousel-item relative w-full h-[550px]">
-            <img src="Images/1.png" class="w-full" />
+          <div id="slide4" class="carousel-item relative w-full">
+            <img src="Images/1.png" class="w-full max-h-[90%]" />
             <div
               class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2"
             >
@@ -69,7 +69,7 @@
     </header>
     <main class="max-w-screen-xl mt-14 mx-auto">
       <!-- Professional Hockeys -->
-      <section class="text-center mt-24">
+      <section class="text-center mt-24 w-full">
         <div class="divider mb-8"></div>
         <h1 class="text-5xl font-bold mb-6">Professional Hockeys Club</h1>
         <p>
@@ -126,10 +126,10 @@
       </section>
 
       <!-- Program section -->
-      <section class="text-center mt-24 mb-24">
+      <section class="text-center mt-24 mb-24 mx-5 lg:mx-0">
         <div class="divider mb-8"></div>
         <h1 class="text-5xl font-bold mb-6">Program Sections</h1>
-        <p class="text-white">
+        <p>
           Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
           placerat dolor. Purus urna in sit nullam proin.
         </p>
@@ -442,18 +442,18 @@
 
         <!-- Get in touch container -->
         <div class="mb-20 grid grid-cols-1 lg:grid-cols-3 gap-6">
-          <div class="flex flex-col gap-6 border-2 p-8">
-            <div class="text-left bg-[#bced6d1a] p-8">
+          <div class="flex flex-col gap-6 border-2 p-8 rounded-xl">
+            <div class="text-left rounded-lg bg-[#bced6d1a] p-8">
               <img class="mb-6" src="Images/Group 1171275317.png" alt="" />
               <p>Phone Number</p>
               <h3 class="text-lg font-bold">+99465823264</h3>
             </div>
-            <div class="text-left bg-[#fddd5f1a] p-8">
+            <div class="text-left rounded-lg bg-[#fddd5f1a] p-8">
               <img class="mb-6" src="Images/Group 1171275318.png" alt="" />
               <p>Email</p>
               <h3 class="text-lg font-bold">abc@gmail.com</h3>
             </div>
-            <div class="text-left bg-[#629cf31a] p-8">
+            <div class="text-left rounded-lg bg-[#629cf31a] p-8">
               <img class="mb-6" src="Images/Group 1171275321.png" alt="" />
               <p>Location</p>
               <h3 class="text-lg font-bold">Dhaka,Bangladesh</h3>
