--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header class="max-w-screen-xl mt-14 mx-auto">
       <!-- Banner Section -->
-      <section class="mx-5 lg:mx-0">
+      <section class="mx-5 lg:mx-0 lg:relative">
         <div class="carousel w-full">
           <div id="slide1" class="carousel-item relative w-full">
             <img src="Images/1.png" class="w-full max-h-[90%]" />
@@ -65,13 +65,20 @@
             </div>
           </div>
         </div>
-        <div>
-          
+        <div
+          class="bg-black text-white p-4 lg:p-8 lg:w-1/2 rounded-xl lg:absolute lg:right-20 lg:top-[500px]"
+        >
+          <h1 class="text-xl lg:text-2xl mb-1">
+            Meet all the heroes from the field
+          </h1>
+          <p class="text-[#a4a4a4] text-sm lg:text-lg">
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
         </div>
       </section>
-
     </header>
-    <main class="max-w-screen-xl mt-14 mx-auto">
+    <main class="max-w-screen-xl mt-6 lg:mt-14 mx-auto">
       <!-- Professional Hockeys -->
       <section class="text-center mt-24 w-full">
         <div class="divider mb-8"></div>
@@ -153,7 +160,7 @@
             class="hero w-full h-[338px]"
             style="background-image: url(Images/2.png)"
           >
-          <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-overlay bg-opacity-60"></div>
             <div
               class="hero-content text-center text-neutral-content lg:mr-16 lg:mt-16"
             >
@@ -176,7 +183,7 @@
             class="hero w-full h-[338px]"
             style="background-image: url(Images/3.png)"
           >
-          <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-overlay bg-opacity-60"></div>
             <div
               class="hero-content text-center text-neutral-content lg:mr-16 lg:mt-16"
             >
@@ -201,7 +208,7 @@
             class="hero w-full h-[338px] lg:h-[450px] mt-6"
             style="background-image: url(Images/4.png)"
           >
-          <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-overlay bg-opacity-60"></div>
             <div class="hero-content w-full text-center text-neutral-content">
               <div class="max-w-md lg:mr-[700px] lg:mt-[150px] text-left">
                 <h1 class="mb-5 text-3xl font-bold text-white">
