--- a/index.html
+++ b/index.html
@@ -25,6 +25,60 @@
   </head>
   <body>
     <header class="max-w-screen-xl mt-14 mx-auto">
+      <!-- navbar -->
+      <div class="navbar bg-base-100 mb-14">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div
+              tabindex="0"
+              role="button"
+              class="btn btn-ghost pr-0 lg:hidden"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+            >
+              <li><a class="text-lg text-[#FF4240]" href="#">Home</a></li>
+              <li><a class="text-lg" href="#">About</a></li>
+              <li><a class="text-lg" href="#">Page</a></li>
+              <li><a class="text-lg" href="#">Blog</a></li>
+              <li><a class="text-lg" href="#">Contact</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-2xl font-bold"
+            >Hockey<span class="text-[#FF4240]">Round</span></a
+          >
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a class="text-lg text-[#FF4240]" href="#">Home</a></li>
+            <li><a class="text-lg" href="#">About</a></li>
+            <li><a class="text-lg" href="#">Page</a></li>
+            <li><a class="text-lg" href="#">Blog</a></li>
+            <li><a class="text-lg" href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <i class="fa-solid fa-magnifying-glass mr-4 hidden lg:block"></i>
+          <a class="btn bg-[#FF4240] text-white">Get Started</a>
+        </div>
+      </div>
+
       <!-- Banner Section -->
       <section class="mx-5 lg:mx-0 lg:relative">
         <div class="carousel w-full">
