--- a/index.html
+++ b/index.html
@@ -135,15 +135,17 @@
     <main class="max-w-screen-xl mt-6 lg:mt-14 mx-auto">
       <!-- Professional Hockeys -->
       <section class="text-center mt-24 w-full">
-        <div class="divider mb-8"></div>
-        <h1 class="text-2xl lg:text-5xl font-bold mb-6">
-          Professional Hockeys Club
-        </h1>
-        <p>
-          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-          placerat dolor. Purus urna in sit nullam proin.
-        </p>
-        <div class="divider mt-8 mb-12"></div>
+        <div class="mx-5 lg:mx-0">
+          <div class="divider mb-8"></div>
+          <h1 class="text-2xl lg:text-5xl font-bold mb-6">
+            Professional Hockeys Club
+          </h1>
+          <p>
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+          <div class="divider mt-8 mb-12"></div>
+        </div>
         <div class="grid grid-cols-1 lg:grid-cols-4 gap-8">
           <div>
             <div
@@ -219,7 +221,7 @@
               class="hero-content text-center text-neutral-content lg:mr-16 lg:mt-16"
             >
               <div class="max-w-md text-left">
-                <h1 class="mb-5 text-3xl font-bold text-white">
+                <h1 class="mb-5 text-2xl lg:text-3xl font-bold text-white">
                   Junior Program
                 </h1>
                 <p class="mb-5 text-white">
@@ -242,7 +244,7 @@
               class="hero-content text-center text-neutral-content lg:mr-16 lg:mt-16"
             >
               <div class="max-w-md text-left">
-                <h1 class="mb-5 text-3xl font-bold text-white">
+                <h1 class="mb-5 text-2xl lg:text-3xl font-bold text-white">
                   Teenager Program
                 </h1>
                 <p class="mb-5 text-white">
@@ -265,7 +267,7 @@
             <div class="hero-overlay bg-opacity-60"></div>
             <div class="hero-content w-full text-center text-neutral-content">
               <div class="max-w-md lg:mr-[700px] lg:mt-[150px] text-left">
-                <h1 class="mb-5 text-3xl font-bold text-white">
+                <h1 class="mb-5 text-2xl lg:text-3xl font-bold text-white">
                   Professional Program
                 </h1>
                 <p class="mb-5 text-white">
@@ -283,17 +285,19 @@
       </section>
 
       <!-- New Product -->
-      <section class="text-center mb-24">
-        <div class="divider mb-8"></div>
-        <h1 class="text-2xl lg:text-5xl font-bold mb-6">Our New Products</h1>
-        <p>
-          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-          placerat dolor. Purus urna in sit nullam proin.
-        </p>
-        <div class="divider mt-8 mb-12"></div>
+      <section class="text-center mb-24 mx-5 lg:mx-0">
+        <div class="">
+          <div class="divider mb-8"></div>
+          <h1 class="text-2xl lg:text-5xl font-bold mb-6">Our New Products</h1>
+          <p>
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+          <div class="divider mt-8 mb-12"></div>
+        </div>
 
         <!-- product content -->
-        <div class="lg:flex gap-6 justify-center">
+        <div class="lg:flex gap-6 space-y-6 lg:space-y-0 justify-center">
           <div
             class="block lg:flex gap-5 w-full items-center border-2 p-6 rounded-xl"
           >
@@ -377,7 +381,7 @@
             </div>
           </div>
         </div>
-        <div class="lg:flex gap-6 justify-center mt-6">
+        <div class="lg:flex gap-6 space-y-6 lg:space-y-0 justify-center mt-6">
           <div
             class="block lg:flex gap-5 w-full items-center border-2 p-6 rounded-xl"
           >
@@ -463,7 +467,9 @@
             </div>
           </div>
         </div>
-        <div class="lg:flex gap-6 mt-6 mb-20 justify-center">
+        <div
+          class="lg:flex gap-6 space-y-6 lg:space-y-0 mt-6 mb-20 justify-center"
+        >
           <div
             class="block lg:flex gap-5 w-full items-center border-2 p-6 rounded-xl"
           >
@@ -657,22 +663,26 @@
     </main>
 
     <footer class="footer p-10 bg-[#131318] text-white">
-      <aside class="lg:ml-28 text-center lg:text-left w-full lg:w-1/2">
-        <h3 class="text-3xl font-bold mb-1 ml-14 lg:ml-0">Get In Touch</h3>
-        <p class="text-white">
+      <aside class="lg:ml-28 lg:text-left flex flex-col">
+        <h3 class="text-3xl font-bold mb-1 w-full text-center lg:text-left">
+          Get In Touch
+        </h3>
+        <p class="text-white text-center lg:text-left">
           Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
           dolor. Purus urna in sit nullam proin.
         </p>
-        <div class="mt-6 ml-20 lg:ml-0">
-          <i class="fa-regular fa-message text-red-500 mr-2"></i>
-          <span>abc@gmail.com</span>
-        </div>
-        <div class="ml-20 lg:ml-0">
-          <i class="fa-solid fa-phone text-red-500 mr-2"></i>
-          <span>+9938783264</span>
+        <div class="block mx-auto lg:mx-0">
+          <div class="mt-6">
+            <i class="fa-regular fa-message text-red-500 mr-2"></i>
+            <span>abc@gmail.com</span>
+          </div>
+          <div class="mt-2">
+            <i class="fa-solid fa-phone text-red-500 mr-2"></i>
+            <span>+9938783264</span>
+          </div>
         </div>
       </aside>
-      <div class="flex gap-32">
+      <div class="flex gap-32 w-full justify-center">
         <nav class="flex flex-col space-y-4">
           <header class="footer-title">Services</header>
           <a class="link link-hover">Branding</a>
@@ -688,7 +698,7 @@
           <a class="link link-hover">Press kit</a>
         </nav>
       </div>
-      <div class="flex ml-28 lg:ml-0">
+      <div class="flex w-full justify-center">
         <nav class="flex flex-col space-y-4">
           <header class="footer-title">Legal</header>
           <a class="link link-hover">Terms of use</a>
