client section added

--- a/index.html
+++ b/index.html
@@ -557,6 +557,78 @@
         </div>
       </section>
 
+      <!-- Client Section -->
+      <section class="mx-5 mb-12 lg:mx-0 text-center">
+        <div>
+          <div class="divider mb-8"></div>
+          <h1 class="text-2xl lg:text-5xl font-bold mb-6">Clients Question</h1>
+          <p>
+            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+            turpis placerat dolor. Purus urna in sit nullam proin.
+          </p>
+          <div class="divider mt-8 mb-12"></div>
+        </div>
+        <!-- client container-->
+        <div
+          class="lg:flex space-y-6 lg:space-y-0 gap-6 border-2 p-8 rounded-xl"
+        >
+          <img class="w-full lg:w-1/2" src="Images/11.png" alt="" />
+          <div class="w-full space-y-4 text-left">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                Our Equipment
+              </div>
+              <div class="collapse-content">
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
+                  esse.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Hockey Training
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Private Lessons
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Ski Touring</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Pricings</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Booking</div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Get In Touch -->
       <section class="text-center mx-5 lg:mx-0">
         <div class="divider mb-8"></div>
