some responsive style added

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </ul>
           </div>
           <a class="btn btn-ghost text-2xl font-bold"
-            >Hockey<span class="text-[#FF4240]">Round</span></a
+            >Hockeys<span class="text-[#FF4240]">Round</span></a
           >
         </div>
         <div class="navbar-center hidden lg:flex">
@@ -735,11 +735,11 @@
     </main>
 
     <footer class="footer p-10 bg-[#131318] text-white">
-      <aside class="lg:ml-28 lg:text-left flex flex-col">
+      <aside class="lg:ml-28 lg:text-left lg:w-1/2 flex flex-col">
         <h3 class="text-3xl font-bold mb-1 w-full text-center lg:text-left">
           Get In Touch
         </h3>
-        <p class="text-white text-center lg:text-left">
+        <p class="text-white text-center lg:text-left w-9/12 mx-auto lg:mx-0">
           Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
           dolor. Purus urna in sit nullam proin.
         </p>
