final style and text edited

--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
             Meet all the heroes from the field
           </h1>
           <p class="text-[#a4a4a4] text-sm lg:text-lg">
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Our heroes are made us proud with their contribution in world stage.
+            Heroes make the history for the nation.
           </p>
         </div>
       </section>
@@ -141,8 +141,8 @@
             Professional Hockeys Club
           </h1>
           <p>
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            In our professional hockey club we give our best output to satisfy
+            people.
           </p>
           <div class="divider mt-8 mb-12"></div>
         </div>
@@ -158,7 +158,7 @@
             <h5 class="text-2xl lg:text-xl font-semibold mt-6 mb-4">
               Prayer Facility
             </h5>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p>Our prayer facility is more advanced than others .</p>
           </div>
           <div>
             <div
@@ -171,7 +171,10 @@
             <h5 class="text-2xl lg:text-xl font-semibold mt-6 mb-4">
               Experienced Coach
             </h5>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p>
+              We have a very experienced coach to teach you quickly and
+              comfortably.
+            </p>
           </div>
           <div>
             <div
@@ -184,7 +187,10 @@
             <h5 class="text-2xl lg:text-xl font-semibold mt-6 mb-4">
               Senior Player
             </h5>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p>
+              Our senior player give you more tricks and tips which help you to
+              get well output.
+            </p>
           </div>
           <div>
             <div
@@ -197,7 +203,9 @@
             <h5 class="text-2xl lg:text-xl font-semibold mt-6 mb-4">
               Training Ground
             </h5>
-            <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+            <p>
+              We have a large training ground which make player comfortable.
+            </p>
           </div>
         </div>
       </section>
@@ -207,8 +215,8 @@
         <div class="divider mb-8"></div>
         <h1 class="text-2xl lg:text-5xl font-bold mb-6">Program Sections</h1>
         <p>
-          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-          placerat dolor. Purus urna in sit nullam proin.
+          We demand some of our especial program that can help you to get a good
+          technique of playing sports.
         </p>
         <div class="divider mt-8 mb-12"></div>
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
@@ -225,9 +233,9 @@
                   Junior Program
                 </h1>
                 <p class="mb-5 text-white">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna. Id et sed euismod natoque
-                  amet nunc morbi nulla. Tortor congue sed et in.
+                  It is a fundamental program which is more attractive and gives
+                  a better output. We recommend to the beginners to join our
+                  junior program to make your sports career strong.
                 </p>
                 <button class="btn bg-[#FF4240] border-none text-white text-xl">
                   Register Now
@@ -248,9 +256,9 @@
                   Teenager Program
                 </h1>
                 <p class="mb-5 text-white">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna. Id et sed euismod natoque
-                  amet nunc morbi nulla. Tortor congue sed et in.
+                  It is basic course and higher then fundamental program. Here
+                  midterm people are join which build their sports experience
+                  more strong.
                 </p>
                 <button class="btn bg-[#FF4240] border-none text-white text-xl">
                   Register Now
@@ -271,9 +279,9 @@
                   Professional Program
                 </h1>
                 <p class="mb-5 text-white">
-                  Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit
-                  elit enim sagittis turpis in magna. Id et sed euismod natoque
-                  amet nunc morbi nulla. Tortor congue sed et in.
+                  It is our higher category exclusive program where experienced
+                  people can appear here for increase their knowledge on sports
+                  more higher.
                 </p>
                 <button class="btn bg-[#FF4240] border-none text-white text-xl">
                   Register Now
@@ -289,10 +297,7 @@
         <div class="">
           <div class="divider mb-8"></div>
           <h1 class="text-2xl lg:text-5xl font-bold mb-6">Our New Products</h1>
-          <p>
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
-          </p>
+          <p>our product must be surprize you from all of side.</p>
           <div class="divider mt-8 mb-12"></div>
         </div>
 
@@ -310,7 +315,7 @@
                     name="rating-2"
                     class="mask mask-star-2 bg-orange-400 mr-1"
                   />
-                  <span>5.0</span>
+                  <span>4.9</span>
                 </div>
                 <div class="mr-4 text-xl lg:text-[16px] lg:mr-0">
                   <i class="fa-regular fa-eye mr-0 lg:mr-1"></i>
@@ -322,16 +327,16 @@
                 </div>
               </div>
               <h3 class="my-3 text-xl lg:text-lg font-bold">
-                World Cup Flags Football
+                Official World Cup Jacket
               </h3>
               <p class="text-lg lg:text-sm mb-4">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                Grab our official Jacket before it disappear.
               </p>
               <div class="lg:flex justify-between">
                 <p
                   class="text-[#FF4240] font-bold mb-2 lg:mb-0 text-xl lg:text-lg"
                 >
-                  Price - $22
+                  Price - $122
                 </p>
                 <div class="flex items-center">
                   <i class="fa-solid fa-cart-shopping"></i>
@@ -352,7 +357,7 @@
                     name="rating-2"
                     class="mask mask-star-2 bg-orange-400 mr-1"
                   />
-                  <span>5.0</span>
+                  <span>4.1</span>
                 </div>
                 <div class="mr-4 text-xl lg:text-[16px] lg:mr-0">
                   <i class="fa-regular fa-eye mr-0 lg:mr-1"></i>
@@ -363,15 +368,17 @@
                   <span>200</span>
                 </div>
               </div>
-              <h3 class="my-3 text-xl lg:text-lg font-bold">Cap For Hockeys</h3>
+              <h3 class="my-3 text-xl lg:text-lg font-bold">
+                World Cup Flags Football
+              </h3>
               <p class="text-lg lg:text-sm mb-4">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                This is our official football flag..
               </p>
               <div class="lg:flex justify-between">
                 <p
                   class="text-[#FF4240] font-bold mb-2 lg:mb-0 text-xl lg:text-lg"
                 >
-                  Price - $22
+                  Price - $212
                 </p>
                 <div class="flex items-center">
                   <i class="fa-solid fa-cart-shopping"></i>
@@ -394,7 +401,7 @@
                     name="rating-2"
                     class="mask mask-star-2 bg-orange-400 mr-1"
                   />
-                  <span>5.0</span>
+                  <span>3.2</span>
                 </div>
                 <div class="mr-4 text-xl lg:text-[16px] lg:mr-0">
                   <i class="fa-regular fa-eye mr-0 lg:mr-1"></i>
@@ -405,11 +412,9 @@
                   <span>200</span>
                 </div>
               </div>
-              <h3 class="my-3 text-xl lg:text-lg font-bold">
-                World Cup Flags Football
-              </h3>
+              <h3 class="my-3 text-xl lg:text-lg font-bold">Cap for hockeys</h3>
               <p class="text-lg lg:text-sm mb-4">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                Exclusive hockey cap are come here.
               </p>
               <div class="lg:flex justify-between">
                 <p
@@ -448,10 +453,10 @@
                 </div>
               </div>
               <h3 class="my-3 text-xl lg:text-lg font-bold">
-                World Cup Flags Football
+                Our world cup jersey fan edition
               </h3>
               <p class="text-lg lg:text-sm mb-4">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                More beautiful and exclusive jersey fan edition.
               </p>
               <div class="lg:flex justify-between">
                 <p
@@ -494,10 +499,10 @@
                 </div>
               </div>
               <h3 class="my-3 text-xl lg:text-lg font-bold">
-                World Cup Flags Football
+                Head Protection Helmet
               </h3>
               <p class="text-lg lg:text-sm mb-4">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                It can save you for serious injury or accident.
               </p>
               <div class="lg:flex justify-between">
                 <p
@@ -536,10 +541,10 @@
                 </div>
               </div>
               <h3 class="my-3 text-xl lg:text-lg font-bold">
-                World Cup Flags Football
+                World Official Football
               </h3>
               <p class="text-lg lg:text-sm mb-4">
-                Dolor sit amet consectetur. Ut urna diam quis sagittis.
+                Official football here with more attractive look.
               </p>
               <div class="lg:flex justify-between">
                 <p
@@ -563,8 +568,7 @@
           <div class="divider mb-8"></div>
           <h1 class="text-2xl lg:text-5xl font-bold mb-6">Clients Question</h1>
           <p>
-            Dit amet consectetur. Condimentum dignissim adipiscing aliquam
-            turpis placerat dolor. Purus urna in sit nullam proin.
+            Frequently Asked Question to us. We have a solution of your problem.
           </p>
           <div class="divider mt-8 mb-12"></div>
         </div>
@@ -581,8 +585,8 @@
               </div>
               <div class="collapse-content">
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos,
-                  esse.
+                  We provide best equipment to people which satisfy our every
+                  member satisfaction.
                 </p>
               </div>
             </div>
@@ -592,7 +596,10 @@
                 Hockey Training
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  Our training in weekly 4days which is more enough to strong
+                  your skills
+                </p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200">
@@ -601,28 +608,39 @@
                 Private Lessons
               </div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  For every weak member we can give private lessons for better
+                  understanding.
+                </p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
-              <div class="collapse-title text-xl font-medium">Ski Touring</div>
+              <div class="collapse-title text-xl font-medium">Sky Touring</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  Our sky touring is the best interesting and enjoyment program
+                  compare to other and we assure no risky condition for all
+                  side.
+                </p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">Pricings</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  We have always keep the price reasonable with premium service
+                </p>
               </div>
             </div>
             <div class="collapse collapse-plus bg-base-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">Booking</div>
               <div class="collapse-content">
-                <p>hello</p>
+                <p>
+                  Let's dive into this with full of strength and mental setup.
+                </p>
               </div>
             </div>
           </div>
@@ -633,10 +651,7 @@
       <section class="text-center mx-5 lg:mx-0">
         <div class="divider mb-8"></div>
         <h1 class="text-2xl lg:text-5xl font-bold mb-6">Get In Touch</h1>
-        <p>
-          Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
-          placerat dolor. Purus urna in sit nullam proin.
-        </p>
+        <p>For any such of enquiry feel free to message us.</p>
         <div class="divider mt-8 mb-12"></div>
 
         <!-- Get in touch container -->
@@ -645,12 +660,12 @@
             <div class="text-left rounded-lg bg-[#bced6d1a] p-8">
               <img class="mb-6" src="Images/Group 1171275317.png" alt="" />
               <p>Phone Number</p>
-              <h3 class="text-lg font-bold">+99465823264</h3>
+              <h3 class="text-lg font-bold">+880-1918108019</h3>
             </div>
             <div class="text-left rounded-lg bg-[#fddd5f1a] p-8">
               <img class="mb-6" src="Images/Group 1171275318.png" alt="" />
               <p>Email</p>
-              <h3 class="text-lg font-bold">abc@gmail.com</h3>
+              <h3 class="text-lg font-bold">arifprox199@gmail.com</h3>
             </div>
             <div class="text-left rounded-lg bg-[#629cf31a] p-8">
               <img class="mb-6" src="Images/Group 1171275321.png" alt="" />
@@ -740,17 +755,17 @@
           Get In Touch
         </h3>
         <p class="text-white text-center lg:text-left w-9/12 mx-auto lg:mx-0">
-          Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat
-          dolor. Purus urna in sit nullam proin.
+          For any kind of information we just eagerly waited for you for helping
+          you. So feel free to message us.
         </p>
         <div class="block mx-auto lg:mx-0">
           <div class="mt-6">
             <i class="fa-regular fa-message text-red-500 mr-2"></i>
-            <span>abc@gmail.com</span>
+            <span>arifprox199@gmail.com</span>
           </div>
           <div class="mt-2">
             <i class="fa-solid fa-phone text-red-500 mr-2"></i>
-            <span>+9938783264</span>
+            <span>+880-1918108019</span>
           </div>
         </div>
       </aside>
@@ -771,7 +786,7 @@
         </nav>
       </div>
       <div class="flex w-full justify-center">
-        <nav class="flex flex-col space-y-4">
+        <nav class="flex flex-col space-y-4 text-center">
           <header class="footer-title">Legal</header>
           <a class="link link-hover">Terms of use</a>
           <a class="link link-hover">Privacy policy</a>
